# AOC

./: .gitignore  README.md
jureslak/: Cargo.toml
jureslak/day1/: day1.rs
jureslak/day2/: day2.rs
jureslak/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day24.rs  day25.rs  main.rs
jureslak/src/2020/: common.rs  day01.rs  day06.rs  day08.rs  day10.rs  day14.rs  day17.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs
jureslak/src/2021/: day02.rs  day04.rs  day06.rs  day08.rs  day10.rs  day11.rs  day17.rs  day18.rs  day21.rs  day23.rs  day25.rs  main.rs
