[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jure Slak <jure.slak@gmail.com>"]
edition = "2018"

[dependencies]
gcd = "1.2.0"
itertools = "0.10.3"
regex = "1"
num = "0.4.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main2021"
path = "src/2021/main.rs"

[[bin]]
name = "main2020"
path = "src/2020/main.rs"
